Fix use of instance variable in pagy_header #660

--- a/app/views/banners/index.html.haml
+++ b/app/views/banners/index.html.haml
@@ -11,7 +11,7 @@
     %p
       No Banners were found.
   -else
-    = render 'shared/pagy_header', locals: { pagy: @pagy }
+    = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
 
     = render partial: 'banners/sortable_table', locals: { q: @q, banners: @banners }
 
