Add mypanels page (#659)
* Add pagy array helpers for pagination #658

* Add MyPanels route, controller, views #658

* Add MyPanels header link #658

* MyPanels specs #658

* Cleanup, clarification, typos found during #658

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,5 +1,24 @@
 @import 'settings';
 
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#content {
+  flex: 1 0 auto;
+  padding: 1em;
+}
+
+#footer {
+  flex-shrink: 0;
+  padding: 0 1em;
+}
+
 .grid-container {
   header {
     .top-bar-left {
