--- a/app/views/grants/_dates_card.html.haml
+++ b/app/views/grants/_dates_card.html.haml
@@ -8,22 +8,27 @@
       %dd
         = grant.publish_date
       %dt
-        Submission Open Date:
+        Submission Period:
       %dd
-        = grant.submission_open_date
-      %dt.secondary
-        Submission Close Date:
-      %dd
-        = grant.submission_close_date
-      - if current_user.present? && grant.panel.start_datetime? && (current_user.get_role_by_grant(grant: grant).present? || grant.reviewers.include?(current_user))
-        %dt
-          Panel Start:
-        %dd
-          = grant.panel.start_datetime
-        %dt.secondary
-          Panel End:
-        %dd
-          = grant.panel.end_datetime
-        %hr
-        .text-center
-          = link_to 'View Panel', grant_panel_path(grant)
+        %span.open
+          #{grant.submission_open_date.to_formatted_s(:short_format)}
+        &mdash;
+        %span.close
+          #{grant.submission_close_date.to_formatted_s(:short_format)}
+      - if current_user.present?
+        - if grant.panel.start_datetime? && (current_user.get_role_by_grant(grant: grant).present? || grant.reviewers.include?(current_user))
+          %dt
+            Panel Start:
+          %dd
+            = grant.panel.start_datetime
+          %dt
+            Panel End:
+          %dd
+            = grant.panel.end_datetime
+          %hr
+            .text-center
+              = link_to 'View Panel', grant_panel_path(grant)
+        - elsif current_user.get_role_by_grant(grant: grant).present?
+          %hr
+          .text-center
+            = link_to 'Set Panel Time', edit_grant_panel_path(@grant)
