--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -182,3 +182,26 @@ h2#section {
     color: $black;
   }
 }
+
+// grant dates
+  #grant-dates {
+    .card-divider {
+      padding: .5rem 1rem;
+    }
+    .card-section {
+      padding: 0.5rem 1rem;
+    }
+    dl {
+      dt {
+        font-size: .95rem;
+        font-weight: bold;
+        margin-bottom: 0;
+      }
+      dd {
+        margin-top: 0;
+      }
+      hr {
+        margin: .5rem;
+      }
+    }
+  }
