Standardize grant headers, add breadcrumb links #656

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -176,8 +176,10 @@ h1#grant-name {
   }
 }
 
+h1#grant-home,
 h2#section {
   font-size: 1.65em;
+  font-weight: normal;
   a {
     color: $black;
   }
