--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -1,15 +1,26 @@
 - content_for(:page_title, "Reviewers - #{@grant.name}")
 
-%h1
-  = @grant.name
+%h1#grant-name
+  = link_to @grant.name, grant_path(@grant)
+%h2#section
+  Reviewers
+
+.small-12.cell
+  %ul.breadcrumbs
+    %li
+      = link_to 'Home', root_path
+    %li
+      = link_to 'Grant Home', grant_path(@grant)
+    %li
+      = link_to 'Edit', edit_grant_path(@grant)
+    %li
+      Reviewers
 
 = render 'shared/grant_state', { grant: @grant }
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %h3
-    Reviewers
 
   %h5
     Add a Reviewer by Email Address
