--- a/app/views/grant_submissions/forms/edit.html.haml
+++ b/app/views/grant_submissions/forms/edit.html.haml
@@ -1,15 +1,26 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
 
-%h1
-  = @grant.name
+%h1#grant-name
+  = link_to @grant.name, grant_path(@grant)
+%h2#section
+  Submission Form
+
+.small-12.cell
+  %ul.breadcrumbs
+    %li
+      = link_to 'Home', root_path
+    %li
+      = link_to 'Grant Home', grant_path(@grant)
+    %li
+      = link_to 'Edit', edit_grant_path(@grant)
+    %li
+      Submission Form
 
 = render 'shared/grant_state', { grant: @grant }
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %h3
-    Questions
 
   %p
     %em
