--- a/app/views/grants/new.html.haml
+++ b/app/views/grants/new.html.haml
@@ -1,6 +1,6 @@
 - content_for(:page_title, 'Create a New Grant')
 
-%h1 Create a New Grant
+%h1#grant-name Create a New Grant
 
 = form_with model: @grant, local: true do |f|
   = render 'form', f: f, grant: @grant, disable_fields: false
