--- a/app/views/grants/criteria/index.html.haml
+++ b/app/views/grants/criteria/index.html.haml
@@ -2,16 +2,28 @@
 
 - disable_fields = !policy(@grant).grant_editor_access?
 
-%h1
-  = @grant.name
+%h1#grant-name
+  = link_to @grant.name, grant_path(@grant)
+%h2#section
+  Review Criteria
+
+.small-12.cell
+  %ul.breadcrumbs
+    %li
+      = link_to 'Home', root_path
+    %li
+      = link_to 'Grant Home', grant_path(@grant)
+    %li
+      = link_to 'Edit', edit_grant_path(@grant)
+    %li
+      Review Criteria
+
 
 = render 'shared/grant_state', { grant: @grant }
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %h3 Review Criteria
-
   .grid-x
     .cell.small-12
       %p
