--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,8 +1,20 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
 - disable_fields = !policy(@grant).update?
 
-%h1
-  = @grant.name
+%h1#grant-name
+  = link_to @grant.name, grant_path(@grant)
+%h2#section
+  Edit
+
+.small-12.cell
+  %ul.breadcrumbs
+    %li
+      = link_to 'Home', root_path
+    %li
+      = link_to 'Grant Home', grant_path(@grant)
+    %li
+      Edit
+
 
 = render 'shared/grant_state', { grant: @grant }
 
@@ -12,7 +24,3 @@
   = form_with model: @grant, local: true, id: 'grant-edit' do |f|
     = render 'form', f: f, grant: @grant, disable_fields: disable_fields
 
-
-= link_to 'Show', @grant, id: "grant-#{@grant.id}"
-|
-= link_to 'Back', grants_path
