--- a/app/views/panels/edit.html.haml
+++ b/app/views/panels/edit.html.haml
@@ -1,7 +1,23 @@
 - content_for(:page_title, "Edit Panel - #{@grant.name}")
 
-%h1
-  = @grant.name
+%h1#grant-name
+  = link_to @grant.name, grant_path(@grant)
+%h2#section
+  Edit Panel
+
+.small-12.cell
+  %ul.breadcrumbs
+    %li
+      = link_to 'Home', root_path
+    %li
+      = link_to 'Grant Home', grant_path(@grant)
+    %li
+      = link_to 'Edit', edit_grant_path(@grant)
+    %li
+      = link_to 'Panel', grant_panel_path(@grant)
+    %li
+      Edit
+
 
 = render 'shared/grant_state', { grant: @grant }
 
