--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -176,9 +176,34 @@ h1#grant-name {
   }
 }
 
+h1#grant-home,
 h2#section {
   font-size: 1.65em;
+  font-weight: normal;
   a {
     color: $black;
   }
 }
+
+// grant dates
+  #grant-dates {
+    .card-divider {
+      padding: .5rem 1rem;
+    }
+    .card-section {
+      padding: 0.5rem 1rem;
+    }
+    dl {
+      dt {
+        font-size: .95rem;
+        font-weight: bold;
+        margin-bottom: 0;
+      }
+      dd {
+        margin-top: 0;
+      }
+      hr {
+        margin: .5rem;
+      }
+    }
+  }
