Use configured application_name on footer and home page #675

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 .grid-x.align-center-middle
   .small-12.cell#section-intro
     %h4.text-center
-      Competitions is a platform to run NIH-style grant competitions including pilot projects and research awards.
+      #{COMPETITIONS_CONFIG[:application_name]} is a platform to run NIH-style grant competitions including pilot projects and research awards.
 %hr.small-11
 .grid-x.align-center-middle
   .small-12.text-center
