--- a/app/views/grant_permissions/index.html.haml
+++ b/app/views/grant_permissions/index.html.haml
@@ -21,15 +21,23 @@
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %p
-    - if policy(@grant).grant_editor_access?
-      = link_to 'Add new permission', new_grant_grant_permission_path(@grant)
+  - if policy(@grant).grant_editor_access?
+    #submenu.top-bar
+      .top-bar-left
+        %ul.menu
+          %li.menu-text
+            Actions:
+          %li
+            = link_to 'Grant access to another user', new_grant_grant_permission_path(@grant)
 
   - unless @grant_permissions.present?
     %p
       No roles have been assigned on this grant.
   - else
-    %table
+
+    = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
+
+    %table.hover
       %thead
         %tr
           %th
