--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -1,4 +1,4 @@
-- content_for(:page_title, "Add User Permissions for #{@grant.name}")
+- content_for(:page_title, "New Permission for #{@grant.name}")
 
 %h1#grant-name
   = link_to @grant.name, grant_path(@grant)
@@ -23,8 +23,7 @@
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %h2
-    = yield(:page_title)
+
   %p
     = link_to 'Back to Permissions', grant_grant_permissions_path
   %ul
@@ -40,7 +39,8 @@
       %strong
         Viewer
       = "- View grant and its submissions and reviews."
-.grid-x
-  .cell
-    = form_with model: [@grant, @grant_permission], local: true do |f|
-      = render 'new_form', f: f, grant: @grant, users: @users
+
+  .grid-x
+    .cell
+      = form_with model: [@grant, @grant_permission], local: true do |f|
+        = render 'new_form', f: f, grant: @grant, users: @users
