--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -21,16 +21,17 @@
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-
-  %h5
-    Add a Reviewer by Email Address
-  .grid-x
-    .cell.small-12
-    = form_for :grant_reviewer, url: grant_reviewers_path(@grant) do |f|
-      .input-group
-        = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field'
-        .input-group-button
-          = f.submit 'Look Up', class: 'button small'
+  #submenu.top-bar
+    .top-bar-left
+      %ul.menu
+        %li.menu-text
+          Add a Reviewer by Email Address
+        %li
+          = form_for :grant_reviewer, url: grant_reviewers_path(@grant) do |f|
+            .input-group
+              = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field'
+              .input-group-button
+                = f.submit 'Look Up', class: 'button small'
 
   %hr
 
