Use new grant_header partial #677

--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -1,22 +1,18 @@
 - content_for(:page_title, "Reviewers - #{@grant.name}")
 
-%h1#grant-name
-  = link_to @grant.name, grant_path(@grant)
-%h2#section
-  Reviewers
+= render 'shared/grant_header', { grant: @grant, section_title: 'Reviewers' }
 
-.small-12.cell
-  %ul.breadcrumbs
-    %li
-      = link_to 'Home', root_path
-    %li
-      = link_to 'Grant Home', grant_path(@grant)
-    %li
-      = link_to 'Edit', edit_grant_path(@grant)
-    %li
-      Reviewers
-
-= render 'shared/grant_state', { grant: @grant }
+.grid-x
+  .small-12.cell
+    %ul.breadcrumbs
+      %li
+        = link_to 'Home', root_path
+      %li
+        = link_to 'Grant Home', grant_path(@grant)
+      %li
+        = link_to 'Edit', edit_grant_path(@grant)
+      %li
+        Reviewers
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
