--- a/app/views/grant_permissions/edit.html.haml
+++ b/app/views/grant_permissions/edit.html.haml
@@ -1,24 +1,21 @@
-- content_for(:page_title, "Edit User Permissions")
+- content_for(:page_title, 'Edit User Permission')
 
-%h1#grant-name
-  = link_to @grant.name, grant_path(@grant)
-%h2#section
-  Edit User Permission
+= render 'shared/grant_header', { grant: @grant, section_title: yield(:page_title) }
 
-.small-12.cell
-  %ul.breadcrumbs
-    %li
-      = link_to 'Home', root_path
-    %li
-      = link_to 'Grant Home', grant_path(@grant)
-    %li
-      = link_to 'Edit', edit_grant_path(@grant)
-    %li
-      = link_to 'Permissions', grant_grant_permissions_path(@grant)
-    %li
-      Edit Permission
+.grid-x
+  .small-12.cell
+    %ul.breadcrumbs
+      %li
+        = link_to 'Home', root_path
+      %li
+        = link_to 'Grant Home', grant_path(@grant)
+      %li
+        = link_to 'Edit', edit_grant_path(@grant)
+      %li
+        = link_to 'Permissions', grant_grant_permissions_path(@grant)
+      %li
+        Edit Permission
 
-= render 'shared/grant_state', { grant: @grant }
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
