--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -1,24 +1,20 @@
 - content_for(:page_title, "New Permission for #{@grant.name}")
 
-%h1#grant-name
-  = link_to @grant.name, grant_path(@grant)
-%h2#section
-  New Permission
+= render 'shared/grant_header', { grant: @grant, section_title: 'New Permission' }
 
-.small-12.cell
-  %ul.breadcrumbs
-    %li
-      = link_to 'Home', root_path
-    %li
-      = link_to 'Grant Home', grant_path(@grant)
-    %li
-      = link_to 'Edit', edit_grant_path(@grant)
-    %li
-      = link_to 'Permissions', grant_grant_permissions_path(@grant)
-    %li
-      New Permission
-
-= render 'shared/grant_state', { grant: @grant }
+.grid-x
+  .small-12.cell
+    %ul.breadcrumbs
+      %li
+        = link_to 'Home', root_path
+      %li
+        = link_to 'Grant Home', grant_path(@grant)
+      %li
+        = link_to 'Edit', edit_grant_path(@grant)
+      %li
+        = link_to 'Permissions', grant_grant_permissions_path(@grant)
+      %li
+        New Permission
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
