--- a/app/views/grants/reviews/index.html.haml
+++ b/app/views/grants/reviews/index.html.haml
@@ -1,22 +1,19 @@
 - content_for(:page_title, "Reviews - #{@grant.name}")
 
-%h1#grant-name
-  = link_to @grant.name, grant_path(@grant)
-%h2#section
-  Reviews
 
-.small-12.cell
-  %ul.breadcrumbs
-    %li
-      = link_to 'Home', root_path
-    %li
-      = link_to 'Grant Home', grant_path(@grant)
-    %li
-      = link_to 'Edit', edit_grant_path(@grant)
-    %li
-      Reviews
+= render 'shared/grant_header', { grant: @grant, section_title: 'Reviews' }
 
-= render 'shared/grant_state', { grant: @grant }
+.grid-x
+  .small-12.cell
+    %ul.breadcrumbs
+      %li
+        = link_to 'Home', root_path
+      %li
+        = link_to 'Grant Home', grant_path(@grant)
+      %li
+        = link_to 'Edit', edit_grant_path(@grant)
+      %li
+        Reviews
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
