--- a/app/assets/stylesheets/criteria.scss
+++ b/app/assets/stylesheets/criteria.scss
@@ -32,5 +32,11 @@ main {
         }
       }
     }
+    #overall-impact.nested-fields {
+      margin-top: 1.25rem;
+      .checkboxes label {
+        color: #8a8a8a;
+      }
+    }
   }
 }
