PR feedback: Add applicant name to email #679

--- a/app/views/reviewer_mailer/assignment.html.haml
+++ b/app/views/reviewer_mailer/assignment.html.haml
@@ -6,6 +6,9 @@
   %br
   = link_to @submission.title, grant_submission_url(@grant, @submission)
   %br
+  by #{full_name(@review.applicant)}
+
+  %br
   for #{@grant.name}.
 
 %p
