Customize js delete confirm dialogs #578

--- a/app/views/grant_permissions/index.html.haml
+++ b/app/views/grant_permissions/index.html.haml
@@ -44,10 +44,11 @@
 
       %tbody
         - @grant_permissions.each do |grant_permission|
+          - grant_permission_user_name = full_name(grant_permission.user)
           %tr
             %td
-              = full_name(grant_permission.user)
+              = grant_permission_user_name
             %td
               = grant_permission.role.capitalize
             %td
-              = render partial: "#{current_user.get_role_by_grant(grant: @grant)}_links", locals: { grant_permission: grant_permission, grant: @grant }
+              = render partial: "#{current_user.get_role_by_grant(grant: @grant)}_links", locals: { grant_permission: grant_permission, grant: @grant, grant_permission_user_name: grant_permission_user_name }
