--- a/app/views/banners/_form.html.haml
+++ b/app/views/banners/_form.html.haml
@@ -27,4 +27,4 @@
     - else
       = f.submit 'Update', class: 'button'
       = link_to 'Cancel', banner, class: 'button secondary clear'
-      = link_to 'Delete', banner, method: :destroy, data: { confirm: 'Are you sure?'}, class: 'button alert clear'
+      = link_to 'Delete', banner, method: :destroy, data: { confirm: 'Are you sure you want to delete this banner entirely? To take it down without deleting it, uncheck the Visible box.'}, class: 'button alert clear'
