--- a/app/assets/stylesheets/grant_submission_form.scss
+++ b/app/assets/stylesheets/grant_submission_form.scss
@@ -1,7 +1,9 @@
 main.forms {
   form.edit_grant_submission_form {
-    a.button {
-      margin: 0.25em 0.5em;
+    fieldset {
+      a.button {
+        margin: 0.25em 0.5em;
+      }
     }
     fieldset.fieldset {
       legend {
