--- a/app/views/grant_permissions/_new_form.html.haml
+++ b/app/views/grant_permissions/_new_form.html.haml
@@ -1,7 +1,8 @@
 .grid-x.grid-padding-x
   .cell.small-12.medium-6
     = f.label :user_id, 'Email Address'
-    = f.select(:user_id, users.map{ |u| [u.email, u.id] }, { include_blank: true })
+    = f.select(:user_id, [], { include_blank: true }, data: { users_query_source: users_query_grant_grant_permissions_path(grant_id: @grant.id) })
+
   .cell.small-12.medium-4
     = f.label :role, 'Grant Role'
     = f.select :role, grant_permission_role_select_options, include_blank: 'Please select'
