--- a/app/views/grant_permissions/_edit_form.html.haml
+++ b/app/views/grant_permissions/_edit_form.html.haml
@@ -1,16 +1,16 @@
 .grid-x
-  .cell
-    .grid-x
-      = f.label :grant, 'Grant: '
-      = link_to grant.name, grant_path(grant)
-    .grid-x
-      = f.label :user, 'User\'s Email: '
+  .cell.small-12.medium-4
+    = f.label :user, 'Edit Permission for:'
+    = full_name(@user)
+    = surround ' (', ')' do
       = @user.email
-    .grid-x
-      = f.label :role, 'Grant Role'
-      = f.select :role, grant_permission_role_select_options
+  .cell.small-12.medium-4
+    = f.label :role, 'Grant Role'
+    = f.select :role, grant_permission_role_select_options, include_blank: 'Please select'
 
 .grid-x
-  .actions
+  .cell.small-12.actions
     = f.submit 'Update', class: 'button'
     = link_to 'Cancel', grant_grant_permissions_path(grant), class: 'button secondary'
+
+
