--- a/app/views/banners/_sortable_table.html.haml
+++ b/app/views/banners/_sortable_table.html.haml
@@ -17,4 +17,4 @@
         %td= banner.visible
         %td= banner.created_at
         %td= link_to 'Edit', edit_banner_path(banner) if policy(banner).edit?
-        %td= link_to 'Delete', banner, method: :delete, data: { confirm: 'Are you sure?' } if policy(banner).destroy?
+        %td= link_to 'Delete', banner, method: :delete, data: { confirm: 'Are you sure you want to delete this banner entirely? To take it down without deleting it, uncheck the Visible box on the edit page.' } if policy(banner).destroy?
