--- a/app/views/grant_permissions/_new_form.html.haml
+++ b/app/views/grant_permissions/_new_form.html.haml
@@ -1,7 +1,7 @@
 .grid-x.grid-padding-x
   .cell.small-12.medium-6
     = f.label :user_id, 'Email Address'
-    = f.collection_select   :user_id, users, :id, :email, prompt: true
+    = f.select(:user_id, users.map{ |u| [u.email, u.id] }, { include_blank: true })
   .cell.small-12.medium-4
     = f.label :role, 'Grant Role'
     = f.select :role, grant_permission_role_select_options, include_blank: 'Please select'
