--- a/app/views/grant_permissions/_admin_links.html.haml
+++ b/app/views/grant_permissions/_admin_links.html.haml
@@ -1,3 +1,3 @@
 %ul.menu.simple
   %li= link_to 'Edit', edit_grant_grant_permission_path(grant, grant_permission)
-  %li= link_to 'Delete', grant_grant_permission_path(grant, grant_permission), method: :delete, data: { confirm: 'Are you sure?' }
+  %li= link_to 'Delete', grant_grant_permission_path(grant, grant_permission), method: :delete, data: { confirm: "Are you sure you want to remove #{grant_permission_user_name} from this grant?" }
